Ensure sortable column headings don't wrap

--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -69,20 +69,24 @@ th {
   width: 0.5em;
 }
 
-th[aria-sort] a {
-  display: inline-block;
-  padding-right: 1em;
-}
+th[aria-sort] {
+  white-space: nowrap;
 
-th[aria-sort]:after {
-  content: '\25BC';
-  color: $grey-2;
-  font-size: 0.8em;
-  transform: scaleY(0.8);
-  display: inline-block;
-  margin-left: -1em;
-  text-decoration: none;
-  pointer-events: none;
+  a {
+    display: inline-block;
+    padding-right: 1em;
+  }
+
+  &:after {
+    content: '\25BC';
+    color: $grey-2;
+    font-size: 0.8em;
+    transform: scaleY(0.8);
+    display: inline-block;
+    margin-left: -1em;
+    text-decoration: none;
+    pointer-events: none;
+  }
 }
 
 th[aria-sort=ascending]:after {
